--- a/Parismi_operation_overview.html
+++ b/Parismi_operation_overview.html
@@ -249,7 +249,7 @@ multiple channels are drawn together, with a different color for each) or the
 <li>Orthogonal views (on which annotations also appear and can be manipulated) can be
 toggled on or off with the "Orthogonal" button.</li>
 <li>By default the scrollwheel changes the displayed z slice (in the main xy view), or
-the displayed x or y slices (in the yz and xy orthogonal views, respectively). For
+the displayed x or y slices (in the yz and xz orthogonal views, respectively). For
 fine stepping through slices, one can press the x, y, or z keys.</li>
 <li>The contrast can be adjusted by using the mouse scrollwheel while pressing shift</li>
 <li>One can scroll through the channels by using the mouse scrollwheel while pressing
