--- a/Parismi_operation_overview.html
+++ b/Parismi_operation_overview.html
@@ -165,25 +165,34 @@ pre-existing pipeline (which can be a good way of exploring Parismi's functional
 either click the "Load table" button and select an <code>.xml</code> file from our dataset release,
 or drag such a file and drop it onto the Parismi control panel.</p>
 
+<p>Dragging and dropping <code>.tiff</code> or <code>.proto</code> files (containing cell detections, annotations,
+or fluorescence quantification results as explained below) onto the Parismi control panel
+will cause the files to be opened and displayed using the corresponding GUI view. If one
+<code>.tiff</code> file is dropped together with one <code>.proto</code> file, the cells in the <code>.proto</code> file will
+be displayed as an overlay on the image.</p>
+
 <p><em>Overall pipeline structure</em></p>
 
 <p>Each step in the pipeline corresponds to one row in the GUI table. Table columns include
-the following:
+the following:</p>
+
 <ul>
 <li><em>Primary image input</em>. A right click in the field provides a popup menu to assist with
-  input selection. The input can be a file on disk (specified with a full path name, in
-  which <code>~/</code> or <code>~username/</code> can be used as shorthand for user home directories, or a
-  path name relative to the current working directory), an image opened through ImageJ
-  and specified by its name, or the output of another plugin. In the latter case, the
-  reference to the other plugin is given as number specifying the row offset (i.e. -1 to
-  specify the output of the preceding plugin), or as a number prefixed by <code>$</code> to specify
-  an absolute row in the table. Parismi can natively read TIFFs with 32-bit or 64-bit
-  offsets and LSM files. It can transparently decompress GNU zipped files that it
-  recognizes with the <code>.gz</code> extension. Large image files can be opened as "virtual
-  stacks", which means their contents are initially not fully loaded into memory (this is
-  done by default for files over 2 GB in size; this behavior can be manually adjusted with
-  the "Use virtual stacks to open files" checkbox). Note that some (but not all) plugins
-  will trigger a read of the full contents when they are given such an input.</li>
+input selection (alternatively, one can drag the file from any file manager and drop it
+onto the field, or directly type in the input specification). The input can be a file on
+disk (specified with a full path name, in which <code>~/</code> or <code>~username/</code> can be used as
+shorthand for user home directories, or a path name relative to the current working
+directory), an image opened through ImageJ and specified by its name, or the output of
+another plugin. In the latter case, the reference to the other plugin is given as number
+specifying the row offset (i.e. -1 to specify the output of the preceding plugin), or as
+a number prefixed by <code>$</code> to specify an absolute row in the table. Parismi can natively
+read TIFFs with 32-bit or 64-bit offsets and LSM files. It can transparently decompress
+GNU zipped files that it recognizes with the <code>.gz</code> extension. Large image files can be
+opened as "virtual stacks", which means their contents are initially not fully loaded
+into memory (this is done by default for files over 2 GB in size; this behavior can be
+manually adjusted with the "Use virtual stacks to open files" checkbox). Note that some
+(but not all) plugins will trigger a read of the full contents when they are given such
+an input.</li>
 <li><em>Channels</em>. For multiple channel images, a subset of channels to which to apply the
 plugin can be specified by selecting from the list provided.</li>
 <li><em>Plugin name</em>. A right click in the field provides a hierarchical popup menu of all
@@ -201,7 +210,7 @@ offers a brief description of the parameter.</li>
 <li><em>Auxiliary inputs</em>. Some plugins require multiple inputs (e.g. a set of active contour
 seeds and an image on which to run active contours). The inputs are specified in the
 "Auxiliary inputs" column, following the same format as the primary image input column.</li>
-<li><em>Auxiliary outputs</em>. For plugins that have multiple outputs, this column provides a
+<li style="page-break-after:always;"><em>Auxiliary outputs</em>. For plugins that have multiple outputs, this column provides a
 list of names, which Parismi will use to match inputs and outputs of plugins that do
 not follow the one input - one output model.</li>
 <li><em>Show</em>. GUI views of plugin outputs are created by default for most plugins run in GUI
@@ -218,14 +227,14 @@ value.</li>
 that some plugins provide more fine-grained progress reports than others.</li>
 </ul>
 
-<div style="page-break-after: always;"></div>
+
 <p><em>GUI views for Parismi data structures</em></p>
 
 <p>GUI views of plugin outputs include an extended ImageJ image window for image outputs, and
 a table view for cells.</p>
 
 <ul>
-<li><em>Image windows</em> are based on a standard ImageJ display, to which a set of controls and
+<li style="page-break-after:always;"><em>Image windows</em> are based on a standard ImageJ display, to which a set of controls and
 user interaction functionalities are added. The user can perform <em>de novo</em> cell
 annotations, or edits of pre-existing annotations that can be derived from automatic
 detection, previous user edits, or any combination thereof. The annotations include cell
@@ -250,7 +259,8 @@ multiple channels are drawn together, with a different color for each) or the
 toggled on or off with the "Orthogonal" button.</li>
 <li>By default the scrollwheel changes the displayed z slice (in the main xy view), or
 the displayed x or y slices (in the yz and xz orthogonal views, respectively). For
-fine stepping through slices, one can press the x, y, or z keys.</li>
+fine stepping through slices, one can press the x, y, or z keys (use shift for reverse
+stepping).</li>
 <li>The contrast can be adjusted by using the mouse scrollwheel while pressing shift</li>
 <li>One can scroll through the channels by using the mouse scrollwheel while pressing
 option</li>
@@ -269,7 +279,7 @@ clicking in these histograms, which will cause filtering of the displayed cells.
 <li>Cells can be sorted on the value of any field by clicking on the column header.</li>
 <li>A scatterplot of two columns can be obtained by selecting cells in any two columns
 and clicking "Scatter plot from selected columns". In the resulting graph window, the
-x and y axes can be switched an a trendline with user-adjustable local averaging
+x and y axes can be switched and a trendline with user-adjustable local averaging
 window can be displayed. If cells were selected from a single column, a histogram
 is displayed instead and standard statistics reported.</li>
 <li>Basic spreadsheet-like computing functionality is included, which is not fully
@@ -284,7 +294,7 @@ output in which the individual cells can be colored following a user-selected fi
 </li>
 </ul>
 
-<div style="page-break-after: always;"></div>
+
 <p><em>Running pipelines</em></p>
 
 <ul>
@@ -306,44 +316,47 @@ button. Note that plugins differ in how quickly they respond to that button.</li
 
 <p><em>Semi-automated functionality</em></p>
 
-<p>Pipelines often comprise steps for which there is no need for user interaction, and steps
+<p style="page-break-after:always;">Pipelines often comprise steps for which there is no need for user interaction, and steps
 at which it is desirable for a user to review the results and adjust them if need be.
 Parismi can be paused at key steps using the <code>Pause</code> plugin; execution can be resumed
 after user edits by selecting the appropriate row in the pipeline table and clicking
 "Run". To avoid users spending time moving from one dataset to another, one can use the
-"Open next and run" button. This button closes all current plugin outputs, and goes
-through all input and output file names to increment any numbers that occur between
-braces. If datasets are structured in numbered directories, naming files following e.g.
-<code>~username/datasets/{1}/input_1.tiff'</code> will make it possible to iterate through all the
+"Open next and run" button. This button closes all current plugin outputs, goes through
+all input and output file names to increment any numbers that occur between braces, and
+runs the current pipeline on the new inputs (pausing at any positions specified by the
+<code>Pause</code> plugin). If datasets are structured in numbered directories, naming files following
+e.g. <code>~username/datasets/{1}/input_1.tiff</code> will make it possible to iterate through all the
 directories without manual setup at each dataset change. Note that more sophisticated
 batch functionality, which gives more flexibility in terms of file naming and directory
-structure, can be achieved using the <code>BatchOpenV2</code> plugin.</p>
+structure, is offered by the <code>BatchOpenV2</code> plugin.</p>
 
 <p><em>File formats</em></p>
 
-<p>The file formats that Parismi can read and write are as follows:
-  <ul>
-  <li><em>Images</em>. Parismi can natively read 32-bit-offset Tagged Image File Format (i.e.
-  "regular" TIFF) or 64-bit-offset TIFF (i.e. BigTIFF); the latter removes the 2GB or 4GB
-  (depending on implementation) limit on file size. Parismi also natively reads the
-  proprietary Zeiss LSM file format (which is a TIFF variant). Note that other file types
-  can be opened through ImageJ, in particular with the LOCI Bio-Formats plugin, which can
-  read a broad array of file types. By default Parismi writes BigTIFF with ImageJ
-  metadata to specify channels, although for ease of browsing of output images (since
-  BigTIFF is not always supported) it can also rely on ImageJ to output regular TIFF
-  images, in which channels can be displayed as an RGB overlay.</li>
-  <li><em>Cell annotations and segmentations</em>. All data pertaining to automatic cell
-  detections, user detections and edits, annotations, segmentations, and quantification
-  results are stored in a unified format. Parismi relies on Google's <code>Protobuf</code> file
-  format, with fixed fields including cell position and x, y, and z coordinates of all
-  pixels in the segmentation mask, as well as optional fields specifying annotations and
-  analysis results. Parismi reads and writes corresponding files with the <code>.proto</code>
-  extension. To facilitate data exchange with other programs, Protobuf objects can be
-  exported to tab-delimited text files (without the segmentation mask) either manually or
-  through a plugin. Segmentation masks can also be exported as a single TIFF in which each
-  cell receives a pixel value matching its index. Such a file can easily be reused in
-  another program such as Matlab.</li>
-  </ul>
+<p>The file formats that Parismi can read and write are as follows:</p>
+
+<ul>
+<li><em>Images</em>. Parismi can natively read 32-bit-offset Tagged Image File Format (i.e.
+"regular" TIFF) or 64-bit-offset TIFF (i.e. BigTIFF); the latter removes the 2GB or 4GB
+(depending on implementation) limit on file size. Parismi also natively reads the
+proprietary Zeiss LSM file format (which is a TIFF variant). Note that other file types
+can be opened through ImageJ, in particular with the LOCI Bio-Formats plugin, which can
+read a broad array of file types. By default Parismi writes BigTIFF with ImageJ
+metadata to specify channels, although for ease of browsing of output images (since
+BigTIFF is not always supported by external programs) it can also rely on ImageJ to
+output regular TIFF images, in which channels can be displayed as an RGB overlay.</li>
+<li><em>Cell annotations and segmentations</em>. All data pertaining to automatic cell
+detections, user detections and edits, annotations, segmentations, and quantification
+results are stored in a unified format. Parismi relies on Google's <code>Protobuf</code> file
+format, with fixed fields including cell position and x, y, and z coordinates of all
+pixels in the segmentation mask, as well as optional fields specifying annotations and
+analysis results. Parismi reads and writes corresponding files with the <code>.proto</code>
+extension. To facilitate data exchange with other programs, Protobuf objects can be
+exported to tab-delimited text files (without the segmentation mask) either manually or
+through a plugin. Segmentation masks can also be exported as a single TIFF in which each
+cell receives a pixel value matching its index. Such a file can easily be reused in
+another program such as Matlab.</li>
+</ul>
+
 
 <p><em>Notes on saved pipelines</em></p>
 
@@ -355,7 +368,6 @@ either transparently specify default values to be given to plugin parameters tha
 exist in earlier pipelines, or specify that an error should be thrown so manual review
 must occur.</p>
 
-<div style="page-break-after: always;"></div>
 <p><strong>Batch mode</strong></p>
 
 <p>Batch runs can be performed with <code>java -jar A0PipeLine_Manager.jar batch path_to_pipeline.xml</code>.
