--- a/Parismi_operation_overview.html
+++ b/Parismi_operation_overview.html
@@ -372,7 +372,7 @@ must occur.</p>
 
 <p>Batch runs can be performed with <code>java -jar A0PipeLine_Manager.jar batch path_to_pipeline.xml</code>.
 This matches the semi-automated functionality described above, except that pauses for
-user review are skipped, and no GUI windows are open (for a command-line run without batch
+user review are skipped, and no GUI windows are opened (for a command-line run without batch
 functionality, replace <code>batch</code> by <code>singleRun</code>). When using long pipelines with
 adjustments that may need to be made at select steps, it may be a good idea to split
 the pipelines in smaller pieces and use <code>make</code> to handle updates. This is what we have
